// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of Tooltip location bottom 1`] = `
<Tooltip
  backgroundColor="gray"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="white"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  id=""
  location="bottom"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="normal"
  style={Object {}}
  visible={true}
>
  <div
    className="ui-tooltip tooltip tooltipBottom tooltipHide"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "gray",
      }
    }
  >
    <span
      className="ui-tooltip-content"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      backgroundColor="gray"
      borderColor="inherit"
      borderWidth="none"
      className="tooltipTriangleBottom"
      color="white"
      contentEditable={false}
      direction="up"
      disabled={false}
      focus={false}
      id=""
      location="bottom"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      show={false}
      sizing="normal"
      style={Object {}}
      visible={true}
    >
      <svg
        className="ui-triangle triangle normalBox triangleUp normal tooltipTriangleBottom"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stroke": "inherit",
            "strokeWidth": "none",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location bottomLeft 1`] = `
<Tooltip
  backgroundColor="gray"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="white"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  id=""
  location="bottomLeft"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="normal"
  style={Object {}}
  visible={true}
>
  <div
    className="ui-tooltip tooltip tooltipBottomLeft tooltipHide"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "gray",
      }
    }
  >
    <span
      className="ui-tooltip-content"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      backgroundColor="gray"
      borderColor="inherit"
      borderWidth="none"
      className="tooltipTriangleBottomLeft"
      color="white"
      contentEditable={false}
      direction="up"
      disabled={false}
      focus={false}
      id=""
      location="bottomLeft"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      show={false}
      sizing="normal"
      style={Object {}}
      visible={true}
    >
      <svg
        className="ui-triangle triangle normalBox triangleUp normal tooltipTriangleBottomLeft"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stroke": "inherit",
            "strokeWidth": "none",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location bottomRight 1`] = `
<Tooltip
  backgroundColor="gray"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="white"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  id=""
  location="bottomRight"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="normal"
  style={Object {}}
  visible={true}
>
  <div
    className="ui-tooltip tooltip tooltipBottomRight tooltipHide"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "gray",
      }
    }
  >
    <span
      className="ui-tooltip-content"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      backgroundColor="gray"
      borderColor="inherit"
      borderWidth="none"
      className="tooltipTriangleBottomRight"
      color="white"
      contentEditable={false}
      direction="up"
      disabled={false}
      focus={false}
      id=""
      location="bottomRight"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      show={false}
      sizing="normal"
      style={Object {}}
      visible={true}
    >
      <svg
        className="ui-triangle triangle normalBox triangleUp normal tooltipTriangleBottomRight"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stroke": "inherit",
            "strokeWidth": "none",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location middle 1`] = `
<Tooltip
  backgroundColor="gray"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="white"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  id=""
  location="middle"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="normal"
  style={Object {}}
  visible={true}
>
  <div
    className="ui-tooltip tooltip tooltipMiddleRight tooltipHide"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "gray",
      }
    }
  >
    <span
      className="ui-tooltip-content"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      backgroundColor="gray"
      borderColor="inherit"
      borderWidth="none"
      className="tooltipTriangleMiddleRight"
      color="white"
      contentEditable={false}
      direction="left"
      disabled={false}
      focus={false}
      id=""
      location="middle"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      show={false}
      sizing="normal"
      style={Object {}}
      visible={true}
    >
      <svg
        className="ui-triangle triangle normalBox triangleLeft normal tooltipTriangleMiddleRight"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stroke": "inherit",
            "strokeWidth": "none",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location middleLeft 1`] = `
<Tooltip
  backgroundColor="gray"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="white"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  id=""
  location="middleLeft"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="normal"
  style={Object {}}
  visible={true}
>
  <div
    className="ui-tooltip tooltip tooltipMiddleLeft tooltipHide"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "gray",
      }
    }
  >
    <span
      className="ui-tooltip-content"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      backgroundColor="gray"
      borderColor="inherit"
      borderWidth="none"
      className="tooltipTriangleMiddleLeft"
      color="white"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      id=""
      location="middleLeft"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      show={false}
      sizing="normal"
      style={Object {}}
      visible={true}
    >
      <svg
        className="ui-triangle triangle normalBox triangleRight normal tooltipTriangleMiddleLeft"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stroke": "inherit",
            "strokeWidth": "none",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location middleRight 1`] = `
<Tooltip
  backgroundColor="gray"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="white"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  id=""
  location="middleRight"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="normal"
  style={Object {}}
  visible={true}
>
  <div
    className="ui-tooltip tooltip tooltipMiddleRight tooltipHide"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "gray",
      }
    }
  >
    <span
      className="ui-tooltip-content"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      backgroundColor="gray"
      borderColor="inherit"
      borderWidth="none"
      className="tooltipTriangleMiddleRight"
      color="white"
      contentEditable={false}
      direction="left"
      disabled={false}
      focus={false}
      id=""
      location="middleRight"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      show={false}
      sizing="normal"
      style={Object {}}
      visible={true}
    >
      <svg
        className="ui-triangle triangle normalBox triangleLeft normal tooltipTriangleMiddleRight"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stroke": "inherit",
            "strokeWidth": "none",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location none 1`] = `
<Tooltip
  backgroundColor="gray"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="white"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="normal"
  style={Object {}}
  visible={true}
>
  <div
    className="ui-tooltip tooltip invisible tooltipHide"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "gray",
      }
    }
  >
    <span
      className="ui-tooltip-content"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      backgroundColor="gray"
      borderColor="inherit"
      borderWidth="none"
      className=""
      color="white"
      contentEditable={false}
      direction="down"
      disabled={false}
      focus={false}
      id=""
      location="none"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      show={false}
      sizing="normal"
      style={Object {}}
      visible={true}
    >
      <svg
        className="ui-triangle triangle normalBox triangleDown normal"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stroke": "inherit",
            "strokeWidth": "none",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location top 1`] = `
<Tooltip
  backgroundColor="gray"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="white"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  id=""
  location="top"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="normal"
  style={Object {}}
  visible={true}
>
  <div
    className="ui-tooltip tooltip tooltipTop tooltipHide"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "gray",
      }
    }
  >
    <span
      className="ui-tooltip-content"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      backgroundColor="gray"
      borderColor="inherit"
      borderWidth="none"
      className="tooltipTriangleTop"
      color="white"
      contentEditable={false}
      direction="down"
      disabled={false}
      focus={false}
      id=""
      location="top"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      show={false}
      sizing="normal"
      style={Object {}}
      visible={true}
    >
      <svg
        className="ui-triangle triangle normalBox triangleDown normal tooltipTriangleTop"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stroke": "inherit",
            "strokeWidth": "none",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location topLeft 1`] = `
<Tooltip
  backgroundColor="gray"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="white"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  id=""
  location="topLeft"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="normal"
  style={Object {}}
  visible={true}
>
  <div
    className="ui-tooltip tooltip tooltipTopLeft tooltipHide"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "gray",
      }
    }
  >
    <span
      className="ui-tooltip-content"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      backgroundColor="gray"
      borderColor="inherit"
      borderWidth="none"
      className="tooltipTriangleTopLeft"
      color="white"
      contentEditable={false}
      direction="down"
      disabled={false}
      focus={false}
      id=""
      location="topLeft"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      show={false}
      sizing="normal"
      style={Object {}}
      visible={true}
    >
      <svg
        className="ui-triangle triangle normalBox triangleDown normal tooltipTriangleTopLeft"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stroke": "inherit",
            "strokeWidth": "none",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location topRight 1`] = `
<Tooltip
  backgroundColor="gray"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="white"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  id=""
  location="topRight"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="normal"
  style={Object {}}
  visible={true}
>
  <div
    className="ui-tooltip tooltip tooltipTopRight tooltipHide"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "gray",
      }
    }
  >
    <span
      className="ui-tooltip-content"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      backgroundColor="gray"
      borderColor="inherit"
      borderWidth="none"
      className="tooltipTriangleTopRight"
      color="white"
      contentEditable={false}
      direction="down"
      disabled={false}
      focus={false}
      id=""
      location="topRight"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      show={false}
      sizing="normal"
      style={Object {}}
      visible={true}
    >
      <svg
        className="ui-triangle triangle normalBox triangleDown normal tooltipTriangleTopRight"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stroke": "inherit",
            "strokeWidth": "none",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of a Tooltip control 1`] = `
<div
  className="ui-tooltip tooltip tooltipMiddleRight tooltipShow test-class"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "gray",
    }
  }
>
  <span
    className="ui-tooltip-content"
    style={
      Object {
        "color": "white",
      }
    }
  >
    <span>
      Test Text
    </span>
  </span>
  <Triangle
    backgroundColor="gray"
    borderColor="inherit"
    borderWidth="none"
    className="tooltipTriangleMiddleRight"
    color="white"
    contentEditable={false}
    direction="left"
    disabled={false}
    focus={false}
    id=""
    location="middleRight"
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    selected={false}
    show={true}
    sizing="normal"
    style={Object {}}
    visible={true}
  >
    <span>
      Test Text
    </span>
  </Triangle>
</div>
`;

exports[`Test disabling of a Tooltip 1`] = `
<div
  className="ui-tooltip tooltip tooltipMiddleRight tooltipHide disabled nohover"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "gray",
    }
  }
>
  <span
    className="ui-tooltip-content"
    style={
      Object {
        "color": "white",
      }
    }
  />
  <Triangle
    backgroundColor="gray"
    borderColor="inherit"
    borderWidth="none"
    className="tooltipTriangleMiddleRight"
    color="white"
    contentEditable={false}
    direction="left"
    disabled={true}
    focus={false}
    id=""
    location="middleRight"
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    selected={false}
    show={false}
    sizing="normal"
    style={Object {}}
    visible={true}
  />
</div>
`;

exports[`Test making a Tooltip invisible 1`] = `
<div
  className="ui-tooltip tooltip tooltipMiddleRight tooltipHide invisible"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "gray",
    }
  }
>
  <span
    className="ui-tooltip-content"
    style={
      Object {
        "color": "white",
      }
    }
  />
  <Triangle
    backgroundColor="gray"
    borderColor="inherit"
    borderWidth="none"
    className="tooltipTriangleMiddleRight"
    color="white"
    contentEditable={false}
    direction="left"
    disabled={false}
    focus={false}
    id=""
    location="middleRight"
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    selected={false}
    show={false}
    sizing="normal"
    style={Object {}}
    visible={false}
  />
</div>
`;

exports[`Test retrieval of Tooltip props object 1`] = `
Object {
  "backgroundColor": "gray",
  "borderColor": "inherit",
  "borderWidth": "none",
  "className": "",
  "color": "white",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "id": "",
  "location": "middleRight",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "selected": false,
  "show": false,
  "sizing": "normal",
  "style": Object {},
  "visible": true,
}
`;
